infra/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-https-redirect
  namespace: argocd
spec:
  parentRefs:
    - name: puppetmaster
      namespace: gateway
      sectionName: http
  hostnames:
    - "argocd.roguestarr.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  labels:
    gateway: puppetmaster
spec:
  parentRefs:
    - name: puppetmaster
      namespace: gateway
      sectionName: argocd-https
  hostnames:
    - "argocd.roguestarr.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
