infra/argocd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  routes:
    - kind: Rule
      match: Host(`argocd.stonegarden.dev`)
      priority: 10
      middlewares:
        - name: traefik-forward-auth
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.stonegarden.dev`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
